@@ -23,7 +23,7 @@ test_main(void)
   knuth_lfib_init(&lfib, 13);
 
   params = (struct dsa_params *) &pub;
-  ASSERT (dsa_generate_keypair(&pub, &key,
+  ASSERT (dsa_compat_generate_keypair(&pub, &key,
 			       &lfib,
 			       (nettle_random_func *) knuth_lfib_random,
 			       NULL, verbose ? progress : NULL,
@@ -32,7 +32,7 @@ test_main(void)
   test_dsa_key(params, pub.y, key.x, 160);
   test_dsa160(&pub, &key, NULL);
 
-  ASSERT (dsa_generate_keypair(&pub, &key,
+  ASSERT (dsa_compat_generate_keypair(&pub, &key,
 			       &lfib,
 			       (nettle_random_func *) knuth_lfib_random,
 			       NULL, verbose ? progress : NULL,
@@ -41,7 +41,7 @@ test_main(void)
   test_dsa_key(params, pub.y, key.x, 256);
   test_dsa256(&pub, &key, NULL);
   
-  ASSERT (dsa_generate_keypair(&pub, &key,
+  ASSERT (dsa_compat_generate_keypair(&pub, &key,
 			       &lfib,
 			       (nettle_random_func *) knuth_lfib_random,
 			       NULL, verbose ? progress : NULL,
