@@ -1,5 +1,9 @@
 2014-03-28  Niels Möller  <nisse@lysator.liu.se>
 
+	* testsuite/dsa-keygen-test.c (test_main): Explicitly use
+	dsa_compat_generate_keypair.
+	* testsuite/testutils.h: Undo dsa-compat.h name mangling.
+
 	* dsa-keygen.c (dsa_generate_keypair): New interface, generating
 	only a keypair, and no new parameters.
 	* dsa-compat-keygen.c (dsa_compat_generate_keypair): New file.
